Lots of minor fixes for logging